<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikki.hikerswatch.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_bg"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hiker_s_watch"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="24dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp"
        />
    <TextView
        android:id="@+id/tv_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_lat"/>
    <TextView
        android:id="@+id/tv_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_long"/>
    <TextView
        android:id="@+id/tv_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_alt"/>
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_acc"/>
</RelativeLayout>
